Final Project Started File

--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -46,7 +46,14 @@
     "Our project aims to predict graphemes from phonemes. After our project completes, the next step is to map audio to phonemes, which would allow a speaker to say any English word that has phonetics and have the model produce a word spelled the way the word sounds. If the model outputs incorrect results, we believe that a robust autocorrect library would often correct the attempted word into the correct word. As a result, we believe that converting phonemes to graphemes is a step towards technology having an enhanced ability to recognize speech and produce text that closely resembles the phonetics of speech, providing enhanced communication between users and computational devices and evolution of communication.\n",
     "\n",
     "### Webscraping and Cleaning Phonetics\n",
-    "We chose to web scrape phonetics from two web sources: merriam-webster.com and dictionary.com. However, we attempted multiple pdf sources, which did not yield good results. Our code allows for switching between websites by simply adding a new source in the identified code section. However, after reviewing the data, we discovered that dictionary.com produced better and more consistent results and decided to choose the website as our sole source of data collection. Unfortunately, the structure of the phonetics section of the web pages was not entirely consistent across different words. This inconsistency required us to write code that handled various new edge cases to confirm that CSV would only correct data. (comma-separated values file). We initially used synchronous methods of acquiring data. However, concurrency reduced the program runtime by nearly 75%, as determined by runtime logging. The performance increase allows users to collect data significantly faster, allowing for a larger dataset better finetuning of our model. As a result, we acquired over 78,000 word-phonetic combinations for use with our model."
+    "We chose to web scrape phonetics from two web sources: merriam-webster.com and dictionary.com. However, we attempted\n",
+    "multiple pdf sources, which did not yield good results. Our code allows for switching between websites by simply\n",
+    "adding a new source in the identified code section. However, after reviewing the data, we discovered that dictionary\n",
+    ".com produced better and more consistent results and decided to choose the website as our sole source of data\n",
+    "collection. Unfortunately, the structure of the phonetics section of the web pages was not entirely consistent across\n",
+    " different words. This inconsistency required us to write code that handled various new edge cases to confirm that\n",
+    " our CSV (comma-separated values file) would only contain correct data. We initially used synchronous methods of\n",
+    " acquiring data. However, concurrency reduced the program runtime by nearly 75%, as determined by runtime logging. The performance increase allows users to collect data significantly faster, allowing for a larger dataset better finetuning of our model. As a result, we acquired over 78,000 word-phonetic combinations for use with our model."
    ],
    "metadata": {
     "collapsed": false,
@@ -557,11 +564,38 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## MODEL QUESTIONS TO ANSWER:\n",
+    "why did we choose these neural networks and combinations and what were their results?\n",
+    "what was our strategy for increasing accuracy?\n",
+    "what data science techniques were used to implement our model?\n",
+    "\n",
+    "\n",
+    "# Architecture\n",
+    "The model changed signifigantly over time. We tried the following combinations:\n",
+    "\n",
+    "Single layer GRU encoder+decoder\n",
+    "\n",
+    "Double/Triple stacked GRU encoder+decoder\n",
+    "\n",
+    "Single layer LSTM encoder+decoder\n",
+    "\n",
+    "We also varied hidden sizes, testing 512 or 1024\n",
+    "\n",
+    "We settled on the following architecture (hidden size 512):\n",
+    "\n",
+    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "def nemes_to_1_hot_seq(string, nemes=\"phonemes\"):\n",
     "    \"\"\"one hot encodes the word according to either\n",
     "    the phoneme or grapheme list\n",
@@ -607,28 +641,6 @@
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Architecture\n",
-    "The model changed signifigantly over time. We tried the following combinations:\n",
-    "\n",
-    "Single layer GRU encoder+decoder\n",
-    "\n",
-    "Double/Triple stacked GRU encoder+decoder\n",
-    "\n",
-    "Single layer LSTM encoder+decoder\n",
-    "\n",
-    "We also varied hidden sizes, testing 512 or 1024\n",
-    "\n",
-    "We settled on the following architecture (hidden size 512):\n",
-    "\n",
-    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention.\n"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
@@ -992,6 +1004,18 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Insert Graph Resources Here, We need Visuals."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   }
  ],
