Final Project Started Make Additions

--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -567,10 +567,10 @@
    "cell_type": "markdown",
    "source": [
     "## MODEL QUESTIONS TO ANSWER:\n",
-    "why did we choose these neural networks and combinations and what were their results?\n",
-    "what was our strategy for increasing accuracy?\n",
-    "what data science techniques were used to implement our model?\n",
-    "\n",
+    "Why did we choose these neural networks and combinations and what were their results?\n",
+    "What was our strategy for increasing accuracy?\n",
+    "What data science techniques were used to implement our model?\n",
+    "What else could we do to increase the accuracy?\n",
     "\n",
     "# Architecture\n",
     "The model changed signifigantly over time. We tried the following combinations:\n",
