--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -519,6 +519,44 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## MODEL QUESTIONS TO ANSWER:\n",
+    "Why did we choose these neural networks and combinations, and what were their results? <br>\n",
+    "What was our strategy for increasing accuracy? <br>\n",
+    "What data science techniques were used to implement our model? <br>\n",
+    "What else could we do to increase the accuracy? <br>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Architecture\n",
+    "The model changed signifigantly over time. We tried the following combinations:\n",
+    "\n",
+    "Single layer GRU encoder+decoder\n",
+    "\n",
+    "Double/Triple stacked GRU encoder+decoder\n",
+    "\n",
+    "Single layer LSTM encoder+decoder\n",
+    "\n",
+    "We also varied hidden sizes, testing 512 or 1024\n",
+    "\n",
+    "We settled on the following architecture (hidden size 512):\n",
+    "\n",
+    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -561,34 +599,6 @@
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## MODEL QUESTIONS TO ANSWER:\n",
-    "Why did we choose these neural networks and combinations and what were their results?\n",
-    "What was our strategy for increasing accuracy?\n",
-    "What data science techniques were used to implement our model?\n",
-    "What else could we do to increase the accuracy?\n",
-    "\n",
-    "# Architecture\n",
-    "The model changed signifigantly over time. We tried the following combinations:\n",
-    "\n",
-    "Single layer GRU encoder+decoder\n",
-    "\n",
-    "Double/Triple stacked GRU encoder+decoder\n",
-    "\n",
-    "Single layer LSTM encoder+decoder\n",
-    "\n",
-    "We also varied hidden sizes, testing 512 or 1024\n",
-    "\n",
-    "We settled on the following architecture (hidden size 512):\n",
-    "\n",
-    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention.\n"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
