--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "import os\n",
@@ -118,10 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
     "codecs.register_error(\"strict\", codecs.ignore_errors)\n",
     "\n",
     "# Basic Background Info\n",
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# Separate the file by lines to retrieve the length\n",
@@ -193,88 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3441, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"D:\\AppData\\Local\\Temp/ipykernel_1528/2845749331.py\", line 276, in <module>\n",
-      "    fixed_set = remove_invalids()  # Removes around 99.9% of current invalid lines before attempting to acquire new words\n",
-      "  File \"D:\\AppData\\Local\\Temp/ipykernel_1528/2845749331.py\", line 142, in remove_invalids\n",
-      "    lines = re.sub(regex, \"\", fix_lines).replace(r\"﻿\", \"\").split(\"\\n\") # remove the formatting, split by line\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2061, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1101, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 248, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 281, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\inspect.py\", line 1502, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\inspect.py\", line 1460, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\inspect.py\", line 693, in getsourcefile\n",
-      "    if os.path.exists(filename):\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\genericpath.py\", line 19, in exists\n",
-      "    os.stat(path)\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\d2dal\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3441, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"D:\\AppData\\Local\\Temp/ipykernel_1528/2845749331.py\", line 276, in <module>\n",
-      "    fixed_set = remove_invalids()  # Removes around 99.9% of current invalid lines before attempting to acquire new words\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Total_Purged:\t\t2\n",
+      "Total_Purged:\t\t2\n",
+      "15.970731973648071\n"
      ]
     }
    ],
    "source": [
+    "start_time = time.time()\n",
     "# This is the main function to get the urls of size \"size\", returns a list of urls pointing dictionary words+phonetics\n",
     "def get_urls(size):\n",
     "    global dict_list\n",
@@ -316,7 +247,7 @@
     "        not_found.close()\n",
     "\n",
     "        ## This section is used to determine webscraping progress, but is not necessary\n",
-    "        # global total_failed, words_added # Access these variables to help calculate number remaining.\n",
+    "        global total_failed, words_added # Access these variables to help calculate number remaining.\n",
     "        total_failed -= 1  # Decrement the total fails if the page is unavailable.\n",
     "        print(\"Failed:\\t\\t\\t\" + str(\"\\t\") + \":\\t\\t\" + word) # Print if the word could not be added\n",
     "\n",
@@ -491,7 +422,6 @@
     "    # Final set is the set of words remaining to be acquired.\n",
     "    final_set = set(lines) - remove_set - set([\"\"]) - set([\"phonemes,graphemes\\n\"])\n",
     "    purged = init_length - len(final_set) # the difference between start and end lengths is the number purged.\n",
-    "    words_added -= purged\n",
     "\n",
     "    print(\"Total_Purged:\\t\\t\" + str(purged)) #Can be used for debugging or progress verification.\n",
     "\n",
