--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -2,45 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## <center>Phoneme to Grapheme Conversion with a Recurrent Generative Model </center>\n",
     "### <center> Sander Shulhoff, Ryan Brown, Xinyi Liu </center>\n",
     "\n",
     "### The Importance of Language"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "In a world where humanity never developed language, would humans still have been able to communicate with the precision required to convey advanced knowledge to other humans? Without language, many of today's inventions and scientific progression\" would never have existed. An evolutionary biologist went as far as to the creation of language as \"the most important evolutionary invention of the last few million years\" (Nowak 2000). Language allows humans to communicate information with a level of precision that no other animal on earth can replicate. According to psychologists and historians, rational thought can happen without language, but communicating and continuing these ideas through generations are the central tendencies that allow humans to cooperate, develop, and thrive across the globe.\n",
     "\n",
     "The Oxford Dictionary describes linguistics as \"the scientific study of language and its structure, including the study of morphology, syntax, phonetics, and semantics\". From that definition, morphology is the study of words, whose smallest character building blocks are graphemes, and phonetics is the pronunciations of those words and graphemes (Oxford English Dictionary 2021). Most humans can process and recognize words based on their oral pronunciation in their local dialect, but oral communication is not the sole form of communication. In this project, we will be focusing solely on the importance and applications of oral communication and phonetics in Artificial Intelligence using Recurrent Neural Networks"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
+   },
    "source": [
     "### Why Predict Words and Graphemes?\n",
     "Today's speech recognition systems use varying techniques. However, many of the most commonly used speech recognition systems such as Bixby, Siri, Alexa, and Google do not attempt to spell words outside the system's dictionary. For example, a person's name may be easy to pronounce but may have unusual spelling. A food's name may be unique and not listed in dictionaries. To give systems like these a boost in their range of responses, we proposed implementing a new system that attempts to predict graphemes when the word confidence is below a certain threshold."
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
+   },
    "source": [
     "### Our Project\n",
     "Our project aims to predict graphemes from phonemes. After our project completes, the next step is to map audio to phonemes, which would allow a speaker to say any English word that has phonetics and have the model produce a word spelled the way the word sounds. If the model outputs incorrect results, we believe that a robust autocorrect library would often correct the attempted word into the correct word. As a result, we believe that converting phonemes to graphemes is a step towards technology having an enhanced ability to recognize speech and produce text that closely resembles the phonetics of speech, providing enhanced communication between users and computational devices and evolution of communication.\n",
@@ -54,16 +60,13 @@
     " different words. This inconsistency required us to write code that handled various new edge cases to confirm that\n",
     " our CSV (comma-separated values file) would only contain correct data. We initially used synchronous methods of\n",
     " acquiring data. However, concurrency reduced the program runtime by nearly 75%, as determined by runtime logging. The performance increase allows users to collect data significantly faster, allowing for a larger dataset better finetuning of our model. As a result, we acquired over 78,000 word-phonetic combinations for use with our model."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Necessary Imports\n",
     "We import several packages:\n",
@@ -75,14 +78,17 @@
     "\"requests\" to request the webpage\n",
     "time for logging the runtime\n",
     "and concurrent.futures for concurrency."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -93,16 +99,13 @@
     "import requests\n",
     "import time\n",
     "import concurrent.futures  # This import is important for concurrency."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Initialize key variables\n",
     "In order to tailer this file to meet the unique needs of users, we coded several main\n",
@@ -111,14 +114,17 @@
     "website, a\n",
     "list of all known words with no pages or broken phonetics, the number of words to find, and a list of words that have\n",
     " not yet been attempted."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "codecs.register_error(\"strict\", codecs.ignore_errors)\n",
@@ -155,17 +161,17 @@
     "\n",
     "words_added = 0  # Used to keep track of the total number of words added\n",
     "fixed_set = []  # Set of words added to the phonetics"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Initialize intro parameters\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Separate the file by lines to retrieve the length\n",
@@ -173,26 +179,26 @@
     "    temp_read = codecs.open(write_file, \"r\", \"utf-8-sig\")\n",
     "    new_size -= len(codecs.open(write_file, \"r\", \"utf-8-sig\").read().split(\"\\n\"))\n",
     "    temp_read.close()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% Initialize intro parameters\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Declare key functions and then run the code to acquire the phonetics efficiently"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Declare key functions and then run the code to acquire the phonetics efficiently"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -519,55 +525,28 @@
     "# Close out the file\n",
     "b_write.close()\n",
     "err_write.close()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Building the model\n",
+    "\n",
+    "Now we will discuss building and training the model. First well do a bit of setup, importing libraries and computing vocabularies for phonemes and graphemes. A vocabulary is a set of known tokens corresponding, in our case, to phoneme or grapheme tokens. The grapheme list will just be the English alphabet, but there are many more phonemes in the International Phonetic Alphabet. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## MODEL QUESTIONS TO ANSWER:\n",
-    "Why did we choose these neural networks and combinations, and what were their results? <br>\n",
-    "What was our strategy for increasing accuracy? <br>\n",
-    "What data science techniques were used to implement our model? <br>\n",
-    "What else could we do to increase the accuracy? <br>"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Architecture\n",
-    "The model changed signifigantly over time. We tried the following combinations:\n",
-    "\n",
-    "Single layer GRU encoder+decoder\n",
-    "\n",
-    "Double/Triple stacked GRU encoder+decoder\n",
-    "\n",
-    "Single layer LSTM encoder+decoder\n",
-    "\n",
-    "We also varied hidden sizes, testing 512 or 1024\n",
-    "\n",
-    "We settled on the following architecture (hidden size 512):\n",
-    "\n",
-    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# necessary imports\n",
@@ -602,17 +581,27 @@
     "\n",
     "# wow, there are lot of different phonemes!\n",
     "print(phonemes)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wow! Thats a lot of phonemes. Hopefully the model can learn all of those :).\n",
+    "\n",
+    "\n",
+    "Now lets define a couple of helper functions to encode and decode phoneme/grapheme strings. Computers can't process letters themselves, so when we feed phonemes and graphemes into the model, we will 1-hot encode them. Well also define a Pytorch Dataset object to efficiently iterate through our dataset at training time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "def nemes_to_1_hot_seq(string, nemes=\"phonemes\"):\n",
@@ -654,17 +643,49 @@
     "        p, g = self.data.iloc[idx]\n",
     "        # 1-hot encoding\n",
     "        return nemes_to_1_hot_seq(p, nemes = \"phonemes\").to(self.device), nemes_to_1_hot_seq(g, nemes = \"graphemes\").long()\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Architecture\n",
+    "The model changed significantly over time. We tried the following combinations:\n",
+    "\n",
+    "Single layer GRU encoder+decoder\n",
+    "\n",
+    "Double/Triple stacked GRU encoder+decoder\n",
+    "\n",
+    "Single layer LSTM encoder+decoder\n",
+    "\n",
+    "We also varied hidden sizes, testing 512 or 1024\n",
+    "\n",
+    "We settled on the following architecture (hidden size 512):\n",
+    "\n",
+    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention.\n",
+    "\n",
+    "## Reasoning\n",
+    "Why did we choose these neural networks and combinations, and what were their results? <br>\n",
+    "We chose these neural network types because we needed RNN for our sequence inputs, and we needed these RNNs to have cell states to deal with the complex and potentially long input sequences. Accuracy for these models generally sat around 30% on the test set.\n",
+    "\n",
+    "\n",
+    "What was our strategy for increasing accuracy? <br>\n",
+    "\n",
+    "Deeper models, stacking GRUs, testing LSTMs, introducing attention\n",
+    "\n",
+    "What else could we do to increase the accuracy? <br>\n",
+    "State of the art work on G2P for English (the opposite of our task) uses transformers. This would be the next step for this problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# hidden layer size\n",
@@ -823,21 +844,33 @@
     "            if one_hot_to_nemes(out) == ['1']:\n",
     "                break\n",
     "        return outs"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting ready to train\n",
+    "\n",
+    "Now that we have a beautiful architecture, we need to instantiate it as well as a loss function and an optimizer. We use cross entropy loss since the model outputs a \"class\" (one of a number of possible tokens) at each decoding step. Well also use Adam, since more vanilla optimizers (e.g. SGD or SGD+momentum) will tend not to converge on a network this complex.\n",
+    "\n",
+    "We perform a ~90%-10% train test split and define a function for testing the 0-1 accuracy of the model. 0-1 accuracy counts only the words which the model gets exactly correct.\n",
+    "\n",
+    "Note that hyperparameters were tuned by hand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# initialize optimizer/loss func/hyperparams\n",
-    "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "EPOCHS = 15\n",
     "model = seq2seq(device).to(device)\n",
@@ -870,40 +903,49 @@
     "    if correct == 0:\n",
     "        return correct\n",
     "    return correct/len(test_set)\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "print(\"# of model parameters: \", sum(p.numel() for p in model.parameters()))"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 2080 Ti :)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "Our training loop is quite simple. We use a batch size of 1, so as not to deal with padding/packing. We record a couple metrics like loss and current accuracy on the test set as the model progresses. This part will likely take a while to compute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 2080 Ti :)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "writer = SummaryWriter(\"tensorboard_data\")\n",
@@ -939,17 +981,17 @@
     "    # record current accuracy on test set and average loss\n",
     "    writer.add_scalar(\"tensorboard_data/acc\", get_0_1_accuracy(mini_test, model), epoch)\n",
     "    writer.add_scalar(\"tensorboard_data/loss\", tot_loss, epoch)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# turn dropout off\n",
@@ -957,48 +999,45 @@
     "\n",
     "with torch.no_grad():\n",
     "    print(\"Test accuracy: \" + str(get_0_1_accuracy(test, model)))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "Well that accuracy is... okay. It might be better than the average human (when faced with 10s of thousands of words), but thats still a lot of error."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "![alt text](secret_ingredient.jpg)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "![alt text](secret_ingredient.jpg)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "model.encoder.encoder.weight_ih_l0"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "model.encoder.encoder.weight_ih_l0"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Resources\n",
     "If the reader would like more resources related to this topic:\n",
@@ -1020,22 +1059,19 @@
     "https://arxiv.org/abs/2004.06338\n",
     "\n",
     "https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/43264.pdf"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Insert Graph Resources Here, We need Visuals."
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## Insert Graph Resources Here, We need Visuals."
+   ]
   }
  ],
  "metadata": {
