--- a/train.ipynb
+++ b/train.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', 'k', 'y', 'ʊ', 'r', 'ɑ', 'a', 'ɪ', 'z', 'æ', 't', 'ə', 'b', 'n', 'u', 'l', 'm', 'ɛ', 'd', 'e', 'ʃ', 's', 'ʌ', 'g', 'f', 'o', 'θ', 'ɒ', 'i', 'ʒ', 'p', 'ɔ', 'v', 'ː', 'h', 'ŋ', 'w', '̃', 'ɡ', 'j', 'ɜ', 'ð', 'ʰ', 'x', 'c', 'œ', 'ü', 'ɘ', 'ø', 'ĩ']\n"
+     ]
+    }
+   ],
    "source": [
     "# necessary imports\n",
     "import torch\n",
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,9 +291,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model architecture  seq2seq(\n",
+      "  (encoder): Encoder(\n",
+      "    (encoder): GRU(51, 512, num_layers=2, batch_first=True, dropout=0.5, bidirectional=True)\n",
+      "    (fc): Sequential(\n",
+      "      (0): Linear(in_features=1024, out_features=512, bias=True)\n",
+      "      (1): Tanh()\n",
+      "    )\n",
+      "  )\n",
+      "  (decoder): Decoder(\n",
+      "    (attention): Attention(\n",
+      "      (energy): Sequential(\n",
+      "        (0): Linear(in_features=1536, out_features=512, bias=True)\n",
+      "        (1): Tanh()\n",
+      "      )\n",
+      "      (attention): Linear(in_features=512, out_features=1, bias=False)\n",
+      "    )\n",
+      "    (decoder): GRU(1052, 512, batch_first=True)\n",
+      "    (fc): Sequential(\n",
+      "      (0): Linear(in_features=1564, out_features=28, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      ")\n",
+      "train size  70000\n",
+      "test size  8845\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize optimizer/loss func/hyperparams\n",
     "\n",
@@ -413,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.encoder.encoder.weight_ih_l0"
+    "torch.save(model, \"THEMODEL\")"
    ]
   },
   {
