--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -925,7 +925,7 @@
     "collapsed": false
    },
    "source": [
-    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 2080 Ti :)."
+    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 3090 Ti :)."
    ]
   },
   {
@@ -1021,6 +1021,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_true_pred_lists(test_set, model):\n",
+    "    \"\"\"Returns a list of correct outputs and a corresponding list of model predictions\"\"\"\n",
+    "    trues = []\n",
+    "    preds = []\n",
+    "    dataloader = DataLoader(dataset=test_set, batch_size=1)\n",
+    "    for (in_seq, out_seq) in dataloader:\n",
+    "        prediction = model.pred_new(in_seq[0])\n",
+    "        true = \"\".join(one_hot_to_nemes(out_seq[0][0], \"graphemes\"))[1:-1]\n",
+    "        trues.append(true)\n",
+    "        pred = \"\".join(one_hot_to_nemes(prediction, \"graphemes\"))[0:-1]\n",
+    "        preds.append(pred)\n",
+    "\n",
+    "    return trues, preds"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
@@ -1030,7 +1051,46 @@
    },
    "outputs": [],
    "source": [
-    "model.encoder.encoder.weight_ih_l0"
+    "import codecs\n",
+    "from spellchecker import SpellChecker\n",
+    "\n",
+    "dict_filename = \"words_beta.txt\"  # `Name of the file containing many words - error\n",
+    "err_filename = \"404s.txt\"  # List of all of the known error words\n",
+    "\n",
+    "dict_file = open(dict_filename).read()\n",
+    "dict_list = dict_file.split(\"\\n\")\n",
+    "\n",
+    "a_dict = set(codecs.open(\"words_alpha.txt\", \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
+    "# b_write = codecs.open(dict_filename, \"w\", \"utf-8-sig\")\n",
+    "err = set(codecs.open(err_filename, \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
+    "\n",
+    "new_dict_set = list(a_dict - err)  # Subtract the set of errors from the beta dictionary\n",
+    "\n",
+    "\n",
+    "spellcheck = SpellChecker().correction\n",
+    "trues, preds = get_true_pred_lists(test, model)\n",
+    "\n",
+    "def spellcheck_all(str_list, correct_list):\n",
+    "    new_dict = [None] * len(str_list)\n",
+    "    total_equal = 0\n",
+    "    str_list = list(str_list)\n",
+    "    print(str_list)\n",
+    "\n",
+    "    for i in range(len(str_list)):\n",
+    "        if not str_list[i] in a_dict:\n",
+    "            new_dict[i] = (spellcheck(\"\".join(str_list[i])))\n",
+    "            print(\"new_word: \" + new_dict[i])\n",
+    "        else:\n",
+    "            new_dict[i] = str_list[i]\n",
+    "\n",
+    "        if new_dict[i] == str_list[i]:\n",
+    "            total_equal += 1\n",
+    "\n",
+    "    print(\"original list: \" + str(new_dict))\n",
+    "    difference = set(new_dict) - set(correct_list)\n",
+    "    return (difference, total_equal/len(str_list))\n",
+    "\n",
+    "print(str(spellcheck_all(preds, trues)))"
    ]
   },
   {
@@ -1083,14 +1143,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
