--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -6,10 +6,15 @@
     "collapsed": false
    },
    "source": [
-    "## <center>Phoneme to Grapheme Conversion with a Recurrent Generative Model </center>\n",
-    "### <center> Sander Shulhoff, Ryan Brown, Xinyi Liu </center>\n",
+    "## <center>Attention Isn't Quite All You Need: Building a Useful Phoneme to Grapheme (P2G) Recurrent Generative Conversion Model from Scratch with GRUs, Attention, and Subterfuge </center>\n",
+    "### <center> Sander Schulhoff, Ryan Brown, Xinyi Liu </center>\n",
     "\n",
-    "### The Importance of Language"
+    "<center><img src=\"gg.jpg\" alt=\"drawing\" width=\"600\"/></center>\n",
+    "\n",
+    "<center>\"p2g seq2seq attention model\" by GauGAN</center>\n",
+    "\n",
+    "### The Importance of Language\n",
+    "\n"
    ]
   },
   {
@@ -595,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wow! Thats a lot of phonemes. Hopefully the model can learn all of those :).\n",
+    "Wow! Thats a lot of phonemes. Hopefully the model can learn all of those 🙂.\n",
     "\n",
     "\n",
     "Now lets define a couple of helper functions to encode and decode phoneme/grapheme strings. Computers can't process letters themselves, so when we feed phonemes and graphemes into the model, we will 1-hot encode them. Well also define a Pytorch Dataset object to efficiently iterate through our dataset at training time."
@@ -635,7 +640,6 @@
     "        x = torch.argmax(hot)\n",
     "        seq.append(l[x])\n",
     "    return seq\n",
-    "\n",
     "\n",
     "class P2GDataset(Dataset):\n",
     "    \"\"\"Pytorch dataset object for sampling the dataset\"\"\"\n",
@@ -1039,7 +1043,7 @@
     "collapsed": false
    },
    "source": [
-    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 3090 Ti :)."
+    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 3090 Ti 🙂."
    ]
   },
   {
